--- a/TipCalc/app/src/main/AndroidManifest.xml
+++ b/TipCalc/app/src/main/AndroidManifest.xml
@@ -12,11 +12,15 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.TipDetailActivity"></activity>
+        <activity
+            android:name=".activities.TipDetailActivity"
+            android:label="Tip Detail"
+            >
+
+        </activity>
     </application>
 
 </manifest>
